--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,10 +1,133 @@
 {% extends 'main/base.html' %}
-
+{% load static %}
 {% block title %}
 ABOUT
 {% endblock %}
 
 {% block content %}
-<h1>ABOUT</h1>
-<p>Some text</p>
+  <html>
+
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>ELEMENTS</title>
+
+  <!-- slider stylesheet -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="{%static 'css/bootstrap.css'%}" />
+
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{%static 'css/style.css'%}" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="{%static 'css/responsive.css'%}" rel="stylesheet" />
+</head>
+
+<body class="sub_page">
+  <div class="hero_area">
+    <!-- end header section -->
+  </div>
+
+  <!-- about section -->
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <h6>
+              About
+            </h6>
+            <div class="custom_heading-container">
+              <h2>
+                GameShop
+              </h2>
+              <hr>
+            </div>
+            <p>
+              It is a long established fact that a reader will be distracted by the readable content of a page when
+              looking at its layout. The point of using Lorem
+            </p>
+            <div>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="{%static 'images/about-img.png'%}" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- end about section -->
+
+
+  <!-- info section -->
+  <section class="info_section layout_padding">
+    <div class="container">
+      <div class="info_social">
+        <div>
+          <a href="">
+            <img src="{%static 'images/fb.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="{%static 'images/twitter.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="{%static 'images/linkedin.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="{%static 'images/insta.png'%}" alt="">
+          </a>
+        </div>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- end info_section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p>
+      &copy; 2019 All Rights Reserved By
+      <a href="https://html.design/">Free Html Templates</a>
+    </p>
+  </section>
+  <!-- footer section -->
+
+  <script type="text/javascript" src="{%static 'js/jquery-3.4.1.min.js'%}"></script>
+  <script type="text/javascript" src="{%static 'js/bootstrap.js'%}"></script>
+
+</body>
+</body>
+
+</html>
 {% endblock %}
