--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,15 +1,216 @@
 {% extends 'main/base.html' %}
-
+{% load static %}
 {% block title %}
 {{ title }}
 {% endblock %}
 
 {% block content %}
-    <h1>GLAVNAI</h1>
-    {% for el in clients %}
-        <div class ="alert alert-warning mt-2">
-            <h3>{{el.name}}</h3>
-            <p>{{el.surname}}</p>
+<html>
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>ELEMENTS</title>
+
+  <!-- slider stylesheet -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="{%static 'css/bootstrap.css'%}" />
+
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{% static 'css/style.css'%}" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="{% static 'css/responsive.css'%}" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="hero_area">
+    <!-- slider section -->
+    <section class=" slider_section position-relative">
+
+      <div class="slider_bg-container">
+
+      </div>
+      <div class="slider-container">
+
+        <div class="detail-box">
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="sr-only">Next</span>
+          </a>
+          <h1>
+            Discover <br>
+            NEW <br>
+            WORLDS
+          </h1>
+          <p>
+            visit exciting new worlds with our store
+          </p>
         </div>
-    {% endfor %}
+        <div class="img-box">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="{% static 'images/undertale.jpg' %}" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="{% static 'images/god-of-war.jpg' %}" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="{% static 'images/csgo.jpg' %}" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="{% static 'images/dyinglight.jpg' %}" alt="">
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+    <!-- end slider section -->
+  </div>
+
+  <!-- about section -->
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <h6>
+              About
+            </h6>
+            <div class="custom_heading-container">
+              <h2>
+                #1 SHOP
+              </h2>
+              <hr>
+            </div>
+            <p>
+              Shop was recognized as the best at the annual stores tournament
+            </p>
+            <div>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="{% static 'images/logobig.png'%}" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- end about section -->
+
+  <!-- contact section -->
+      <div class="contact_items">
+
+        <a href="">
+          <div class="item ">
+            <div class="img-box box-2">
+
+            </div>
+            <div class="detail-box">
+              <p>
+                +02 1234567890
+              </p>
+            </div>
+          </div>
+        </a>
+        <a href="">
+          <div class="item ">
+            <div class="img-box box-3">
+
+            </div>
+            <div class="detail-box">
+              <p>
+                demo@gmail.com
+              </p>
+            </div>
+          </div>
+        </a>
+        <a href="">
+          <div class="item ">
+            <div class="img-box box-1">
+
+            </div>
+            <div class="detail-box">
+              <p>
+                t will be distracted by the readable
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+
+  <!-- end contact section -->
+
+  <!-- info section -->
+  <section class="info_section layout_padding">
+    <div class="container">
+      <div class="info_social">
+        <div>
+          <a href="">
+            <img src="{%static 'images/fb.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="{%static 'images/twitter.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="{%static 'images/linkedin.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="">
+            <img src="{%static 'images/insta.png'%}" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end info_section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p>
+      &copy; 2022 All Rights Reserved By
+      <a href="#">Me</a>
+    </p>
+  </section>
+  <!-- footer section -->
+
+  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js'%}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.js'%}"></script>
+
+</body>
+
+</html>
 {% endblock %}
