--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,6 +1,40 @@
 <!doctype html>
 {% load static %}
 <html lang="en">
+  <html>
+
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>GameShop</title>
+
+  <!-- slider stylesheet -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="{%static 'css/bootstrap.css'%}" />
+
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{%static 'css/style.css'%}" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="{%static 'css/responsive.css'%}" rel="stylesheet" />
+</head>
+
+<body class="sub_page">
+  <div class="hero_area">
+    <!-- end header section -->
+  </div>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -12,7 +46,7 @@
     <!-- BOOTSSTRAP THEME-->
     <style>
         body{
-            background-color: whitesmoke;
+            background-color: white;
         }
     </style>
 </head>
@@ -34,7 +68,6 @@
             <li><a href="{% url 'home' %}" class="nav-link px-2 text-secondary"><h3>Home</h3></a></li>
             <li><a href="{% url 'about' %}" class="nav-link px-2 text-white"><h3>About</h3></a></li>
             <li><a href="{% url 'shop' %}" class="nav-link px-2 text-white"><h3>Shop</h3></a></li>
-            <li><a href="\admin" class="nav-link px-2 text-white"><h3>Admin</h3></a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -42,11 +75,15 @@
         </form>
           <form class="nav col-12 col-lg-auto mb-2 mb-md-0 ">
               {% if user.is_authenticated %}
-              <li><a href="{% url 'home' %}" class="nav-link px-2 text-white" style="margin: 5px"><h3>{{user.username}} cabinet</h3></a></li>
-              <li><a href="{% url 'logout' %}" class="nav-link px-2 text-secondary" style="margin: 5px"><h4>Logout</h4></a></li>
+                  {% if user.is_superuser%}
+                      <li><a href="\admin" class="nav-link px-2 text-white" style="margin: 5px"><h3>{{user.username}} cabinet</h3></a></li>
+                  {% else%}
+                        <li><a href="{% url 'cart:cart_detail' %}" class="nav-link px-2 text-white" style="margin: 5px"><h3>{{user.username}} cabinet</h3></a></li>
+                  {% endif%}
+                      <li><a href="{% url 'logout' %}" class="nav-link px-2 text-secondary" style="margin: 5px"><h4>Logout</h4></a></li>
               {% else %}
-              <li><a href="{% url 'login' %}" class="btn btn-warning" style="margin: 5px"><h3>Login</h3></a></li>
-              <li><a href="{% url 'register' %}" class="btn btn-warning"style="margin: 5px"><h3>Sign-up</h3></a></li>
+                  <li><a href="{% url 'login' %}" class="btn btn-warning" style="margin: 5px"><h3>Login</h3></a></li>
+                  <li><a href="{% url 'register' %}" class="btn btn-warning"style="margin: 5px"><h3>Sign-up</h3></a></li>
               {% endif %}
           </form>
       </div>
@@ -57,4 +94,45 @@
     <h4>{% block content %}{% endblock %}</h4>
 <!-- content on page-->
 </body>
+</body>
+  <!-- info section -->
+  <section class="info_section layout_padding">
+    <div class="container">
+      <div class="info_social">
+        <div>
+          <a href="https://www.facebook.com/kate.tselishchava">
+            <img src="{%static 'images/fb.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/zabi-yaka-b38080241/">
+            <img src="{%static 'images/linkedin.png'%}" alt="">
+          </a>
+        </div>
+        <div>
+          <a href="https://www.instagram.com/accounts/login/?next=/ars_i_kk/">
+            <img src="{%static 'images/insta.png'%}" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end info_section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p>
+      &copy; 2022 All Rights Reserved By
+      <a href="{% url 'about'%}">GameShopInc</a>
+    </p>
+  </section>
+  <!-- footer section -->
+
+  <script type="text/javascript" src="{%static 'js/jquery-3.4.1.min.js'%}"></script>
+  <script type="text/javascript" src="{%static 'js/bootstrap.js'%}"></script>
+
+</body>
+</body>
+
 </html>
