--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,34 +6,6 @@
 
 {% block content %}
 <html>
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-
-  <title>ELEMENTS</title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="{%static 'css/bootstrap.css'%}" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="{% static 'css/style.css'%}" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="{% static 'css/responsive.css'%}" rel="stylesheet" />
-</head>
-
 <body>
   <div class="hero_area">
     <!-- slider section -->
@@ -105,7 +77,7 @@
               Shop was recognized as the best at the annual stores tournament
             </p>
             <div>
-              <a href="">
+              <a href="{% url 'about'%}">
                 Read More
               </a>
             </div>
@@ -123,93 +95,6 @@
 
 
   <!-- end about section -->
-
-  <!-- contact section -->
-      <div class="contact_items">
-
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-2">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
-            </div>
-          </div>
-        </a>
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-3">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </a>
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-1">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                t will be distracted by the readable
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-
-  <!-- end contact section -->
-
-  <!-- info section -->
-  <section class="info_section layout_padding">
-    <div class="container">
-      <div class="info_social">
-        <div>
-          <a href="">
-            <img src="{%static 'images/fb.png'%}" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="{%static 'images/twitter.png'%}" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="{%static 'images/linkedin.png'%}" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="{%static 'images/insta.png'%}" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end info_section -->
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      &copy; 2022 All Rights Reserved By
-      <a href="#">Me</a>
-    </p>
-  </section>
-  <!-- footer section -->
-
-  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js'%}"></script>
-  <script type="text/javascript" src="{% static 'js/bootstrap.js'%}"></script>
-
 </body>
 
 </html>
