--- a/main/templates/main/testTheme.html
+++ b/main/templates/main/testTheme.html
@@ -1,26 +1,71 @@
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
+{% extends 'main/base.html' %}
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+{% block title %}
+{{ title }}
+{% endblock %}
+
+{% block content %}
+<main>
+  <section class="py-5 text-center container">
+<!--    <div class="row py-lg-5">-->
+      <h1 class="fw-light">CATALOG</h1>
+      <header>
+      <div class="d-flex flex-wrap align-items-center justify-content-center ">
+        <ul class="nav col-12 col-lg-auto  mb-2 justify-content-center mb-md-0">
+            <li><a href="{% url 'shop'%}" class="nav-link  px-2 text-black" style="margin: 5px"><h3 class="fw-light">All</h3></a></li>
+            <li><a href="{% url 'sort_horror'%}" class="nav-link px-2 text-black" style="margin: 5px" ><h3 class="fw-light">Horror</h3></a></li>
+            <li><a href="{% url 'sort_shooter'%}" class="nav-link px-2 text-black" style="margin: 5px" ><h3 class="fw-light">Shooter</h3></a></li>
+            <li><a href="{% url 'sort_adventure'%}" class="nav-link px-2 text-black" style="margin: 5px" ><h3 class="fw-light">Adventure</h3></a></li>
+            <li><a href="{% url 'sort_puzzle'%}" class="nav-link px-2 text-black" style="margin: 5px"><h3 class="fw-light">Puzzle</h3></a></li>
+            <li><a href="{% url 'sort_indi'%}" class="nav-link px-2 text-black" style="margin: 5px" ><h3 class="fw-light">Indi</h3></a></li>
+            <li><a href="{% url 'sort_action'%}" class="nav-link px-2 text-black" style="margin: 5px"><h3 class="fw-light">Action</h3></a></li>
         </ul>
-
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-white bg-dark" placeholder="Search..." aria-label="Search">
-        </form>
-
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
-        </div>
-      </div>
+<!--        <p class="lead text-muted"> That is my shop</p>-->
+<!--        <p>-->
+<!--          <a href="#" class="btn btn-primary my-2">Main call to action</a>-->
+<!--          <a href="#" class="btn btn-secondary my-2">Secondary action</a>-->
+<!--        </p>-->
     </div>
-  </header>
+          </header>
+  </section>
+  <div class="album py-5 bg-light" >
+<!--    <div class="container">-->
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        {% for post in pr%}
+          <div class="{{post.group}}" style="margin-left: 50px;width: 500px;margin-bottom: 100px">
+          <div class="card shadow-sm" style="height: 650px; width: 450px" >
+<!--            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>-->
+            <img src="{{post.image.url}}" class = "card-img-top" height="425">
+            <div class="card-body">
+              <p class="card-text">{{post.name}}</p>
+                <h5 style="font-size: 15px">{{post.description}}</h5>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href = ""><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                  <a href ="{% url 'product' %}"><button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
+                </div>
+                  <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  {%if post.available == False%}
+                    <button type="button" class="btn btn-secondary my-2" >
+                      {{post.price}}$
+                    </button>
+                  {% else %}
+                  <a href="{% url 'home' %}">
+                    <button type="button" class="btn btn-primary my-2">
+                      {{post.price}}$
+                    </button>
+                    </a>
+                  {% endif %}
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {%endfor%}
+      </div>
+<!--    </div>-->
+  </div>
+  </main>
+{% endblock %}
