--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -1,15 +1,12 @@
 {% extends 'main/base.html' %}
-
+{% load static%}
 {% block title %}
-{{ title }}
+SHOP
 {% endblock %}
 
 {% block content %}
-<style>
-        body{
-            background-color: whitesmoke;
-        }
-    </style>
+  <html>
+  <!-- about section -->
 <main>
   <section class="py-5 text-center container">
 <!--    <div class="row py-lg-5">-->
@@ -38,33 +35,14 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         {% for post in pr%}
           <div class="{{post.group}}" style="margin-left: 50px;width: 500px;margin-bottom: 100px">
-          <div class="card shadow-sm" style="height: 650px; width: 450px" >
+          <div class="card shadow-sm" style="height: 600px; width: 450px" >
 <!--            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>-->
-            <img src="{{post.image.url}}" class = "card-img-top" height="425">
+            <a href = "{{post.get_absolute_url}}">
+              <img src="{{post.image.url}}" class = "card-img-top" height="425">
+            </a>
             <div class="card-body">
               <p class="card-text">{{post.name}}</p>
                 <h5 style="font-size: 15px">{{post.description}}</h5>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href = ""><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                  <a href ="{% url 'product' %}"><button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
-                </div>
-                  <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  {%if post.available == False%}
-                    <button type="button" class="btn btn-secondary my-2" >
-                      {{post.price}}$
-                    </button>
-                  {% else %}
-                  <a href="{% url 'home' %}">
-                    <button type="button" class="btn btn-primary my-2">
-                      {{post.price}}$
-                    </button>
-                    </a>
-                  {% endif %}
-                </div>
-              </div>
-              </div>
             </div>
           </div>
         </div>
@@ -73,4 +51,10 @@
 <!--    </div>-->
   </div>
   </main>
+  <!-- end about section -->
+
+</body>
+</body>
+
+</html>
 {% endblock %}
